<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/ic_launcher"
            android:id="@+id/imageView" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="注册"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_button"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="68dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/tableLayout"
            android:onClick="Submit"/>
    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintHorizontal_bias="0.491"
            android:id="@+id/tableLayout">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/user_id"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_t1"
                    android:textAlignment="center" android:textColor="@android:color/black"
                    android:textSize="16sp"/>
            <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_e1"
                    android:textAlignment="center" android:textColor="@android:color/holo_red_light"
                    android:textSize="24sp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/user_name"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_t2"
                    android:textAlignment="center" android:textColor="@android:color/black"
                    android:textSize="16sp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/register_e2"
                    android:textSize="16sp"
            />
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/user_sex"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_t3"
                    android:textAlignment="center" android:textColor="@android:color/black"
                    android:textSize="16sp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/register_e3"
                    android:textSize="16sp"
            />
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/user_birth"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_t4"
                    android:textAlignment="center" android:textColor="@android:color/black"
                    android:textSize="16sp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/register_e4"
                    android:textSize="16sp"
            />
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/user_height"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_t5"
                    android:textAlignment="center" android:textColor="@android:color/black"
                    android:textSize="16sp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/register_e5"
                    android:textSize="16sp"
            />
            <TextView
                    android:text="cm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_t9"
                    android:textAlignment="center" android:textColor="@android:color/black"
                    android:textSize="16sp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/user_weight"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_t6"
                    android:textAlignment="center" android:textColor="@android:color/black"
                    android:textSize="16sp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/register_e6"
                    android:textSize="16sp"
            />
            <TextView
                    android:text="kg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_t10"
                    android:textAlignment="center" android:textColor="@android:color/black"
                    android:textSize="16sp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/user_online"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_t7"
                    android:textAlignment="center" android:textColor="@android:color/black"
                    android:textSize="16sp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/register_e7"
                    android:textSize="16sp"
                    android:enabled="true"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/user_regdate"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_t8"
                    android:textAlignment="center" android:textColor="@android:color/black"
                    android:textSize="16sp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/register_e8"
                    android:textSize="16sp"
                    android:enabled="true"/>
        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>