<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UserInfoActivity">

    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/ic_launcher"
            android:id="@+id/imageView" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="提交"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:id="@+id/user_button"
            android:onClick="Submit" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:id="@+id/linearLayout">
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                  android:layout_marginTop="2dp" android:layout_marginBottom="2dp">
            <TextView
                    android:text="@string/user_id"
                    android:layout_width="100dp"
                    android:layout_height="38dp"
                    android:id="@+id/user_t1"
                    android:textAlignment="center" android:textColor="@android:color/black"
                    android:textSize="15sp" android:layout_gravity="center_vertical" android:singleLine="true"
            />
            <TextView
                    android:layout_width="180dp"
                    android:layout_height="38dp"
                    android:id="@+id/user_e1"
                    android:textAlignment="center" android:textColor="@android:color/black"
                    android:textSize="15sp" android:layout_gravity="center_vertical" android:singleLine="true"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                  android:layout_marginTop="2dp" android:layout_marginBottom="2dp">
            <TextView
                    android:text="@string/user_name"
                    android:layout_width="100dp"
                    android:layout_height="38dp"
                    android:id="@+id/user_t2"
                    android:textAlignment="center" android:textColor="@android:color/black"
                    android:textSize="15sp" android:layout_gravity="center_vertical" android:singleLine="true"
            />
            <EditText
                    android:layout_width="180dp"
                    android:layout_height="38dp"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/user_e2"
                    android:textSize="15sp"
                    android:textAlignment="center" android:layout_gravity="center_vertical"
                    android:singleLine="true"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                  android:layout_marginTop="2dp" android:layout_marginBottom="2dp">
            <TextView
                    android:text="@string/user_sex"
                    android:layout_width="100dp"
                    android:layout_height="38dp"
                    android:id="@+id/user_t3"
                    android:textAlignment="center" android:textColor="@android:color/black"
                    android:textSize="15sp" android:layout_gravity="center_vertical" android:singleLine="true"
            />
            <EditText
                    android:layout_width="180dp"
                    android:layout_height="38dp"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/user_e3"
                    android:textSize="15sp"
                    android:textAlignment="center" android:layout_gravity="center_vertical"
                    android:singleLine="true"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                  android:layout_marginTop="2dp" android:layout_marginBottom="2dp">
            <TextView
                    android:text="@string/user_birth"
                    android:layout_width="100dp"
                    android:layout_height="38dp"
                    android:id="@+id/user_t4"
                    android:textAlignment="center" android:textColor="@android:color/black"
                    android:textSize="15sp" android:layout_gravity="center_vertical" android:singleLine="true"
            />
            <EditText
                    android:layout_width="180dp"
                    android:layout_height="38dp"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/user_e4"
                    android:textSize="15sp"
                    android:textAlignment="center" android:layout_gravity="center_vertical"
                    android:singleLine="true"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                  android:layout_marginTop="2dp" android:layout_marginBottom="2dp">
            <TextView
                    android:text="@string/user_height"
                    android:layout_width="100dp"
                    android:layout_height="38dp"
                    android:id="@+id/user_t5"
                    android:textAlignment="center" android:textColor="@android:color/black"
                    android:textSize="15sp" android:layout_gravity="center_vertical" android:singleLine="true"
            />
            <EditText
                    android:layout_width="180dp"
                    android:layout_height="38dp"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/user_e5"
                    android:textSize="15sp"
                    android:textAlignment="center" android:layout_gravity="center_vertical"
                    android:singleLine="true"/>
            <TextView
                    android:text="cm"
                    android:layout_width="40dp"
                    android:layout_height="38dp"
                    android:id="@+id/user_t9"
                    android:textAlignment="center" android:textColor="@android:color/black"
                    android:textSize="15sp" android:layout_gravity="center_vertical" android:singleLine="true"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_marginTop="2dp" android:layout_marginBottom="2dp">
            <TextView
                    android:text="@string/user_weight"
                    android:layout_width="100dp"
                    android:layout_height="38dp"
                    android:id="@+id/user_t6"
                    android:textAlignment="center" android:textColor="@android:color/black"
                    android:textSize="15sp" android:layout_gravity="center_vertical" android:singleLine="true"
            />
            <EditText
                    android:layout_width="180dp"
                    android:layout_height="38dp"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/user_e6"
                    android:textSize="15sp"
                    android:textAlignment="center" android:layout_gravity="center_vertical"
                    android:singleLine="true"/>
            <TextView
                    android:text="kg"
                    android:layout_width="40dp"
                    android:layout_height="38dp"
                    android:id="@+id/user_t10"
                    android:textAlignment="center" android:textColor="@android:color/black"
                    android:textSize="15sp" android:layout_gravity="center_vertical" android:singleLine="true"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                  android:layout_marginTop="2dp" android:layout_marginBottom="2dp">
            <TextView
                    android:text="@string/user_gps"
                    android:layout_width="100dp"
                    android:layout_height="38dp"
                    android:id="@+id/user_t11"
                    android:textAlignment="center" android:textColor="@android:color/black"
                    android:textSize="15sp" android:layout_gravity="center_vertical" android:singleLine="true"
            />
            <TextView
                    android:layout_width="180dp"
                    android:layout_height="38dp"
                    android:id="@+id/user_e9"
                    android:textAlignment="center" android:textColor="@android:color/black"
                    android:textSize="15sp" android:layout_gravity="center_vertical" android:singleLine="true"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                  android:layout_marginTop="2dp" android:layout_marginBottom="2dp">
            <TextView
                    android:text="@string/user_online"
                    android:layout_width="100dp"
                    android:layout_height="38dp"
                    android:id="@+id/user_t7"
                    android:textAlignment="center" android:textColor="@android:color/black"
                    android:textSize="15sp" android:layout_gravity="center_vertical" android:singleLine="true"
            />
            <TextView
                    android:layout_width="180dp"
                    android:layout_height="38dp"
                    android:id="@+id/user_e7"
                    android:textAlignment="center" android:textColor="@android:color/black"
                    android:textSize="15sp" android:layout_gravity="center_vertical" android:singleLine="true"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                  android:layout_marginTop="2dp" android:layout_marginBottom="2dp">
            <TextView
                    android:text="@string/user_regdate"
                    android:layout_width="100dp"
                    android:layout_height="38dp"
                    android:id="@+id/user_t8"
                    android:textAlignment="center" android:textColor="@android:color/black"
                    android:textSize="15sp" android:singleLine="true"/>
            <TextView
                    android:layout_width="180dp"
                    android:layout_height="38dp"
                    android:id="@+id/user_e8"
                    android:textAlignment="center" android:textColor="@android:color/black"
                    android:textSize="15sp" android:layout_gravity="center_vertical" android:singleLine="true"/>
        </TableRow>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>